--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="main grid-container">
+    <div class="main">
         <div class="m_left grid-item">
             <div class="l_content">
                 <div class="l1">
@@ -47,7 +47,7 @@
                     <div class="l5_C">
                         <div class="l5_1">ADDRESS</div>
                         <div class="l5_1_1">11/1 m.15 Bangramad
-                            Talingchan,Bangkok,10170
+                            Talingchan,Bangkok,<br>10170
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,6 @@
                     <hr>
                     <div class="l4_1">REFERENCE</div>
                     <div class="l6_2">
-                        <p>Teacher</p>
                         <p>Barac Obama</p>
                         <p>Email:B@gmail.com</p>
                         <p>Phone:0954055710</p>
@@ -77,7 +76,7 @@
                         <span>Bangkok</span>
                     </div>
                     <div class="box1_l_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dumm</div>
+                        Lorem </div>
                 </div>
                 <div class="grid-item_l">
                     <div class="box1_l"> 3DS Interactive company</div>
@@ -89,7 +88,7 @@
                         <span>Bangkok</span>
                     </div>
                     <div class="box1_l_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dumm</div>
+                        Lorem </div>
                 </div>
             </div>
             <div class="h_box">EDUCATIONS</div>
@@ -105,7 +104,7 @@
                         <span>Bangkok</span>
                     </div>
                     <div class="box1_l_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dumm</div>
+                        Lorem </div>
                 </div>
                 <div class="grid-item_l">
                     <div class="box1_l"> 3DS Interactive company</div>
@@ -117,35 +116,13 @@
                         <span>Bangkok</span>
                     </div>
                     <div class="box1_l_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dumm</div>
-                </div>
-            </div>
-            <div class="h_box">AWARDS</div>
-            <hr>
-            <div class="l_C grid-container_l">
-                <div class="grid-item_l">
-                    <div class="box1_l">Orisma company</div>
-                    <div class="box1_l_s">2019</div>
-                </div>
-                <div class="grid-item_l">
-                    <div class="box1_l">
-                        <span>Frontend Dev</span>
-                        <span>Bangkok</span>
-                    </div>
-                    <div class="box1_l_s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dumm</div>
-                </div>
-                <div class="grid-item_l">
-                    <div class="box1_l"> 3DS Interactive company</div>
-                    <div class="box1_l_s">2018</div>
-                </div>
-                <div class="grid-item_l">
-                    <div class="box1_l_en">
-                        <span>Frontend Dev</span>
-                    </div>
+                        Lorem </div>
                 </div>
             </div>
 
+        </div>
+        <div class="m_last grid-item">
+            
             <div class="h_box">SKILLS</div>
             <hr>
             <div class="l_D grid-container_l_en">
@@ -183,10 +160,46 @@
                 </div>
 
             </div>
+
+            <div class="h_box_2">SKILLS</div>
+            <hr>
+            <div class="l_D grid-container_l_en" >
+                <div class="grid-item_l">
+                    <div class="box1_l_en">A
+                        <div class="chart">
+                            <div class="c1"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item_l">
+                    <div class="box1_l_en">
+                        <span>B</span>
+                        <div class="chart">
+                            <div class="c2"></div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="grid-item_l">
+                    <div class="box1_l_en">
+                         <span>C</span>
+                        <div class="chart">
+                            <div class="c3"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item_l">
+                    <div class="box1_l_en">
+                        <span>D</span>
+                        <div class="chart">
+                            <div class="c4"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-<div class="bottom"></div> 
     </div>
-   
 </body>
 
 </html>
