--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
             <div class="h_box_2">SKILLS</div>
             <hr>
-            <div class="l_D grid-container_l_en" >
+            <div class="l_D grid-container_l_en bt" >
                 <div class="grid-item_l">
                     <div class="box1_l_en">A
                         <div class="chart">
