--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="me-3.jpg" alt="">
                 </div>
                 <div class="l4">
-                    <div class="l4_1">ABOUT ME</div>
+                    <div class="l4_1">ABOUT ME ei ei</div>
                     <div class="l4_2">
                         SADFGFHGJHKL.GFVDSDA
                         SDFGFHNJMKIYTWQSXD
